# devcontainer-cu117-uv

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
