[project]
name = "devcontainer-cuda-uv-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==1.13.1+cu117",
    "torchvision==0.14.1+cu117",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu117"]
